# cppbackend

./: .gitignore  requirements.txt
.venv-3.10/: pyvenv.cfg
hello/src/: main.cpp
sprint1/problems/async_server/precode/src/: http_server.h  main.cpp
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/precode/src/: cafeteria.h
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/precode/src/: http_server.cpp
sprint1/problems/map_json/solution/src/: http_server.cpp  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/precode/src/: main.cpp
sprint1/problems/sync_server/precode/src/: main.cpp
sprint1/problems/sync_server/solution/: README.md
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_client.cpp  udp_client.cpp  udp_server.cpp
sprint1/samples/tcp-udp/src/: client  server  udp_client  udp_server
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp
sprint2/examples/boost_log/build_debug/: CMakeCache (1-я копия).txt  Makefile (1-я копия)  cmake_install (1-я копия).cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
sprint2/problems/: .gitignore
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/src/: log.cpp  model.h  request_handler.h  request_logger.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  game_session.cpp  game_session.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/precode/: my_logger.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/src/: model.h  move_info.h  request_handler.cpp  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/src/: json_loader.cpp  json_loader.h  request_handler.h
sprint2/problems/static_content/precode/src/: http_server.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/find_return/solution/src/: collision_detector.cpp  json_loader.cpp  model.cpp  model.h  request_handler.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/precode/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: json_loader.cpp
sprint3/problems/instrumentation/precode/: gmon.out
sprint3/problems/instrumentation/solution/: event2dot
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/tv/solution/: conanfile.txt
sprint4/problems/bookypedia-1/solution/: conanfile.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/leave_game/solution/src/: application.cpp  application.h  command_line.h  connection_pool.h  database.cpp  database.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  move_info.h  request_handler.cpp  request_handler.h  tagged.h
sprint4/problems/leave_game/solution/tests/: collision-detector-tests.cpp
sprint4/problems/leave_game/solution/volume/: state
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
(+88 files in other folders)
